--- a/src/components/background/Background.css
+++ b/src/components/background/Background.css
@@ -5,6 +5,6 @@
     right: 0;
     bottom: 0;
     background: black;
-    height: 100vh;
+    height: 100%;
     z-index: -5;
 }
